--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "portafolio",
   "version": "0.1.0",
-  "homepage":"https://hawiecode.github.io",
+  "homepage":"https://hawiecode.github.io/portafolio",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
